--- a/ICI.ProvaCandidato.Web/ICI.ProvaCandidato.Web.csproj
+++ b/ICI.ProvaCandidato.Web/ICI.ProvaCandidato.Web.csproj
@@ -1,11 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.17" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ICI.ProvaCandidato.Negocio\ICI.ProvaCandidato.Negocio.csproj" />
   </ItemGroup>
 
 </Project>
