configurando connection string

--- a/ICI.ProvaCandidato.Web/appsettings.json
+++ b/ICI.ProvaCandidato.Web/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ICINoticias.db;"
+    "DefaultConnection": "Data Source=../ICI.ProvaCandidato.Negocio/ICINoticias.db;"
   },
   "AllowedHosts": "*"
 }
