corrigindo alguns erros de arquitetura

--- a/ICI.ProvaCandidato.Negocio/ICI.ProvaCandidato.Dados.csproj
+++ b/ICI.ProvaCandidato.Negocio/ICI.ProvaCandidato.Dados.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ICI.ProvaCandidato.Dados\ICI.ProvaCandidato.Dados.csproj" />
+    <ProjectReference Include="..\ICI.ProvaCandidato.Dados\ICI.ProvaCandidato.Negocios.csproj" />
   </ItemGroup>
 
 </Project>
