--- a/ICI.ProvaCandidato.Web/ICI.ProvaCandidato.Web.csproj
+++ b/ICI.ProvaCandidato.Web/ICI.ProvaCandidato.Web.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ICI.ProvaCandidato.Negocio\ICI.ProvaCandidato.Negocio.csproj" />
+    <ProjectReference Include="..\ICI.ProvaCandidato.Negocio\ICI.ProvaCandidato.Dados.csproj" />
   </ItemGroup>
 
 </Project>
